--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="clock-container" id="clock">
-        <div class="clock-face">
-            <div class="hand hour-hand" id="hourHand"></div>
-            <div class="hand minute-hand" id="minuteHand"></div>
-            <div class="hand second-hand" id="secondHand"></div>
-        </div>
-        <div class="digital-clock" id="digitalClock"></div>
-    </div>
-
+    <!-- Clock Display -->
+    <div class="clock-container" id="clock"></div>
 
     <div class="reminder-container">
         <h1>Medication Reminder</h1>
